RESOLVED FIXED249649
[IFC][hanging punctuation] Line's trailing hanging content is either preserved whitespace or punctuation
https://bugs.webkit.org/show_bug.cgi?id=249649
Summary [IFC][hanging punctuation] Line's trailing hanging content is either preserve...
alan
Reported 2022-12-20 07:09:58 PST
ssia
Attachments
[fast-cq]Patch (13.34 KB, patch)
2022-12-20 07:29 PST, alan
no flags
alan
Comment 1 2022-12-20 07:29:20 PST
Created attachment 464120 [details] [fast-cq]Patch
EWS
Comment 2 2022-12-20 13:04:50 PST
Committed 258159@main (4d0e3a44df3b): <https://commits.webkit.org/258159@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464120 [details].
Radar WebKit Bug Importer
Comment 3 2022-12-20 13:05:19 PST
Note You need to log in before you can comment on or make changes to this bug.