[IFC][hanging punctuation] Line's trailing hanging content is either preserved whitespace or punctuation https://bugs.webkit.org/show_bug.cgi?id=249649

Reviewed by Antti Koivisto.

The hanging content could be
- leading punctuation (at the front of the first formatted line)
- trailing punctuation (at the end of the last formatted line)
  or preserved whitespace (and the end of each line)

This patch ensures that Line::HangingContent reflects ^^. It also computes trailing hanging punctuation when applicable.

* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::resetTrailingContent):
(WebCore::Layout::Line::removeHangingGlyphs):
(WebCore::Layout::Line::appendInlineBoxStart):
(WebCore::Layout::Line::appendInlineBoxEnd):
(WebCore::Layout::Line::appendTextContent):
(WebCore::Layout::Line::HangingContent::addLeadingGlyphs): Deleted.
(WebCore::Layout::Line::HangingContent::addTrailingGlyphs): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::hangingTrailingWhitespaceWidth const):
(WebCore::Layout::Line::hangingTrailingContentWidth const):
(WebCore::Layout::Line::HangingContent::setLeadingPunctuation):
(WebCore::Layout::Line::HangingContent::resetTrailingContent):
(WebCore::Layout::Line::HangingContent::trailingWhitespaceWidth const):
(WebCore::Layout::Line::HangingContent::trailingWidth const):
(WebCore::Layout::Line::HangingContent::width const):
(WebCore::Layout::Line::HangingContent::setTrailingPunctuation):
(WebCore::Layout::Line::HangingContent::setTrailingWhitespace):
(WebCore::Layout::Line::HangingContent::length const):
(WebCore::Layout::Line::HangingContent::resetTrailingPunctuation):
(WebCore::Layout::Line::hangingLeadingContentWidth const): Deleted.
(WebCore::Layout::Line::HangingContent::leadingLength const): Deleted.
(WebCore::Layout::Line::HangingContent::trailingLength const): Deleted.
(WebCore::Layout::Line::HangingContent::leadingWidth const): Deleted.
(WebCore::Layout::Line::HangingContent::reset): Deleted.
(WebCore::Layout::Line::HangingContent::resetTrailingGlyphs): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::trimmableTrailingContentWidth):

Canonical link: https://commits.webkit.org/258159@main